--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,11 +33,38 @@
             >
         </activity>
 
+        <activity android:name=".ProductDetails"
+            android:label="Product Details"
+            android:screenOrientation="portrait"
+            >
+        </activity>
         <activity android:name=".ProductList"
             android:label="Product List"
             android:screenOrientation="portrait"
             >
         </activity>
+
+        <activity android:name=".Discounts"
+            android:label="Discounts"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+        <activity android:name=".FloatingMenu"
+            android:label="Floating Menu"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+        <activity android:name=".ClockIn"
+            android:label="Clock In"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+        <activity android:name=".EmployeeList"
+            android:label="Employee List"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+
 
     </application>
 
