--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,14 +4,14 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/stock_control_logo"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
         <activity android:name=".MainActivity"
-            android:label="main_activity"
+            android:label="StockControl"
             android:screenOrientation="portrait">
 
             <intent-filter>
@@ -64,7 +64,26 @@
             android:screenOrientation="portrait"
             >
         </activity>
-
+        <activity android:name=".EmployeeDetails"
+            android:label="Employee Details"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+        <activity android:name=".ClockOut"
+            android:label="Clock Out"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+        <activity android:name=".StockTransfer"
+            android:label="Stock Transfer"
+            android:screenOrientation="portrait"
+            >
+        </activity>
+        <activity android:name=".StockWatch"
+            android:label="Stockwatch"
+            android:screenOrientation="portrait"
+            >
+        </activity>
 
     </application>
 
